# wheel-of-misfortune

./: .gitignore  CLAUDE.md  Makefile  OPEN_QUESTIONS.md  README.md  SPEC.md  family.example.yaml  pyproject.toml
app/: engine.py  main.py  models.py  seed.py  state.py  week.py
deploy/: com.storey.misfortune.plist  install.sh  make_icons.py  runbook.md  wheel-of-misfortune.service
prototype/: wheel-of-misfortune.html
tests/: test_api.py  test_engine.py  test_seed.py  test_state.py
web/: app.js  index.html  manifest.json  styles.css  sw.js
